--- a/css/glowbox-version2.css
+++ b/css/glowbox-version2.css
@@ -93,3 +93,6 @@
   .feature-grid { flex-direction: column; align-items: center; }
   .feature.box { min-width: 80vw; }
 }
+.bodyg{
+  width:100%;
+}
