--- a/css/homepage_futuristic.css
+++ b/css/homepage_futuristic.css
@@ -283,3 +283,7 @@ body {
 ::-webkit-scrollbar { width: 10px; background: #232c4a;}
 ::-webkit-scrollbar-thumb { background: var(--accent); border-radius: 8px;}
 ::selection { background: #4fd0e833; }
+
+.box1{
+  color:white;
+}
