--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     display:flex;
     justify-content:center;
     align-item:center;
+    margin-top:10px;
 }
 .futuristic-button {
     background: linear-gradient(45deg, #0f0f2a, #2a0f2a);
